[gd_scene load_steps=4 format=3 uid="uid://bhihmaf3nq0r7"]

[ext_resource type="Script" path="res://Home/SchoolManager/EditSceens/CreateStudentOption.gd" id="1_jdcjb"]
[ext_resource type="StyleBox" uid="uid://b5l8bij5x63n3" path="res://Assets/ButtonColor/BlueButtonNormal.tres" id="1_ver7t"]
[ext_resource type="StyleBox" uid="uid://bt60dr6ro1cwu" path="res://Assets/ButtonColor/BlueButtonHover.tres" id="2_3ovc4"]

[node name="CreateStudentOption" type="CenterContainer"]
custom_minimum_size = Vector2i(780, 60)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -390.0
offset_right = 390.0
offset_bottom = 60.0
grow_horizontal = 2
script = ExtResource("1_jdcjb")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2i(780, 40)
offset_top = 10.0
offset_right = 780.0
offset_bottom = 50.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="VBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2i(780, 20)
offset_top = 10.0
offset_right = 780.0
offset_bottom = 50.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2i(5, 40)
offset_right = 5.0
offset_bottom = 40.0
color = Color(0.572549, 0.619608, 1, 1)

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(60, 40)
offset_left = 9.0
offset_right = 69.0
offset_bottom = 40.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/CenterContainer"]
offset_left = 20.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 30.0
theme_override_styles/normal = ExtResource("1_ver7t")
theme_override_styles/pressed = ExtResource("2_3ovc4")
theme_override_styles/hover = ExtResource("2_3ovc4")

[node name="VBoxContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(700, 0)
offset_left = 73.0
offset_right = 773.0
offset_bottom = 40.0

[node name="StudentBox" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2i(680, 40)
offset_left = 10.0
offset_right = 690.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Student" type="Label" parent="VBoxContainer/VBoxContainer/StudentBox"]
offset_top = 7.0
offset_right = 101.0
offset_bottom = 33.0
text = "ESTUDIANTE:"

[node name="StudentLabel" type="Label" parent="VBoxContainer/VBoxContainer/StudentBox"]
custom_minimum_size = Vector2i(460, 0)
offset_left = 121.0
offset_top = 7.0
offset_right = 581.0
offset_bottom = 33.0
text = "INSERTE NOMBRE ESTUDIANTE"
clip_text = true

[connection signal="toggled" from="VBoxContainer/CenterContainer/CheckBox" to="." method="_on_check_box_toggled"]
